fix to issue with nav alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,7 +282,7 @@ h6 {
   }
 
   .nav-pink {
-    align-items: left;
+    align-items: flex-start;
     background-color: transparent;
     border: none;
     top: 30px;
